--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,7 +1,8 @@
 // Home Content
 
 .home {
-
+  padding-top: 106px;
+  
   .intro {
 
     .hero-image {
