--- a/less/navigation.less
+++ b/less/navigation.less
@@ -3,6 +3,9 @@
 
 section.navigation {
     background: #f4f4f4;
+    position: fixed;
+    width: 100%;
+    opacity: .9;
 
     .nav.container {
         .flexColumn();
